new landing page update

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Timer Tracker - Mac Menu Bar Time Tracking</title>
+      <title>Dingo Track - Mac Menu Bar Time Tracking</title>
   <meta name="description" content="Track your time directly from your Mac menu bar with Google Calendar integration. Simple, fast, and always accessible.">
   <link rel="icon" type="image/png" href="/app-icon.png">
   <script type="module" src="./src/main.jsx"></script>
