--- a/src/dev.html
+++ b/src/dev.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Timer Tracker - Dev Preview</title>
+      <title>Dingo Track - Dev Preview</title>
   <style>
     body {
       margin: 0;
@@ -45,7 +45,7 @@
   </style>
 </head>
 <body>
-  <h1>Timer Tracker - Development Preview</h1>
+        <h1>Dingo Track - Development Preview</h1>
   <p>Live preview of both windows at desktop sizes. Changes auto-refresh.</p>
   
   <div class="windows-container">
