--- a/src/settings.html
+++ b/src/settings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Timer Tracker Settings</title>
+      <title>Dingo Track Settings</title>
   <style>
     * {
       margin: 0;
