--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Dingo Track - Mac Menu Bar Time Tracking</title>
   <meta name="description" content="Track your time directly from your Mac menu bar with Google Calendar integration. Simple, fast, and always accessible.">
-  <link rel="icon" type="image/png" href="/app-icon.png">
+  <link rel="icon" type="image/png" href="/app-icon.png?v=2">
+  <link rel="icon" type="image/png" sizes="32x32" href="/app-icon.png?v=2">
+  <link rel="icon" type="image/png" sizes="16x16" href="/app-icon.png?v=2">
+  <link rel="apple-touch-icon" href="/app-icon.png?v=2">
+  <link rel="shortcut icon" href="/app-icon.png?v=2">
   <script type="module" src="./src/main.jsx"></script>
 </head>
 <body>
