--- a/src/renderer/main/index.html
+++ b/src/renderer/main/index.html
@@ -3,20 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Dingo Track Settings</title>
+  <title>Dingo Track</title>
   <style>
     * {
-      margin: 0;
-      padding: 0;
       box-sizing: border-box;
     }
     
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Text', sans-serif;
-      background: var(--bg-color);
-      color: var(--text-color);
+      margin: 0;
+      padding: 0;
+      background: transparent;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+      font-size: 12px;
+      overflow: hidden;
     }
-    
+
     #root {
       width: 100%;
       height: 100vh;
@@ -25,6 +26,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="./Settings.jsx"></script>
+  <script type="module" src="./App.tsx"></script>
 </body>
 </html>
