--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -10,6 +10,16 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/app-icon.png?v=2">
   <link rel="apple-touch-icon" href="/app-icon.png?v=2">
   <link rel="shortcut icon" href="/app-icon.png?v=2">
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKWSZGHZBD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JKWSZGHZBD');
+  </script>
+  
   <script type="module" src="./src/main.jsx"></script>
 </head>
 <body>
