landing page fixes

--- a/landing-page/terms-of-service.html
+++ b/landing-page/terms-of-service.html
@@ -6,6 +6,10 @@
   <title>Terms of Service - Dingo Track</title>
   <meta name="description" content="Terms of Service for Dingo Track - Time tracking application for Mac">
   <link rel="icon" type="image/png" href="/app-icon.png?v=2">
+  <link rel="icon" type="image/png" sizes="32x32" href="/app-icon.png?v=2">
+  <link rel="icon" type="image/png" sizes="16x16" href="/app-icon.png?v=2">
+  <link rel="apple-touch-icon" href="/app-icon.png?v=2">
+  <link rel="shortcut icon" href="/app-icon.png?v=2">
   <script type="module" src="./src/terms-main.jsx"></script>
 </head>
 <body>
