--- a/landing-page/comparison.html
+++ b/landing-page/comparison.html
@@ -7,7 +7,11 @@
   <meta name="description" content="Compare Trak and Toggl Track time tracking apps. Learn which time tracker is right for your needs.">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="/app-icon.png?v=2">
+  <link rel="icon" type="image/png" sizes="32x32" href="/app-icon.png?v=2">
+  <link rel="icon" type="image/png" sizes="16x16" href="/app-icon.png?v=2">
+  <link rel="apple-touch-icon" href="/app-icon.png?v=2">
+  <link rel="shortcut icon" href="/app-icon.png?v=2">
 
   <!-- Open Graph / Social Media -->
   <meta property="og:title" content="Trak vs Toggl Track - Time Tracking Comparison">
@@ -25,6 +29,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/comparison.jsx"></script>
+  <script type="module" src="./src/comparison.jsx"></script>
 </body>
 </html>
